<resources>
    <string name="app_name">MusicPlayerItune</string>

    <string name="album_art">Album Art</string>
    <string name="music_note">Music Note</string>
    <string name="blue_background">Blue background</string>
    <string name="warning_no_data">No data found.</string>
    <string name="error_fetching_api">There\'s an error when connect to server.</string>
    <string name="play">play song</string>
    <string name="title_favorite">Your Favorite</string>
    <string name="love_this">love this</string>
    <string name="search_song_here">Search song here …</string>
    <string name="your_favorite">+ Your Favorite</string>
    <string name="background">Background</string>
    <string name="error_toast">Sorry, it must be an error \nPlease input another song</string>
    <string name="empty_toast">Sorry, this song is an empty</string>
    <string name="settings">Settings</string>
</resources>