<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <ImageView
        android:id="@+id/iv_toolbar_background"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blue_accent"
        android:contentDescription="@string/blue_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sharp_settings"
        android:backgroundTint="@color/blue_variant_accent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/settings"
        app:layout_constraintTop_toTopOf="@id/iv_toolbar_background"
        app:layout_constraintEnd_toEndOf="@id/iv_toolbar_background"/>

    <EditText
        android:id="@+id/et_search"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_radius_8dp"
        android:hint="@string/search_song_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_toolbar_background" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@color/blue_accent"
        android:text="@string/your_favorite"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_toolbar_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_error"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingHorizontal="32dp"
                android:paddingTop="24dp"
                android:text="@string/warning_no_data"
                android:textStyle="italic"
                android:textColor="@color/teal_700"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_music_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="32dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_music" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>