<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_variant_accent"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_album_art_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/album_art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_song_name_detail"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/iv_album_art_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_album_art_detail"
        app:layout_constraintTop_toBottomOf="@id/iv_album_art_detail"
        tools:text="Song name" />

    <TextView
        android:id="@+id/tv_song_artist_detail"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/iv_album_art_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_album_art_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_song_name_detail"
        tools:text="Artist" />

    <TextView
        android:id="@+id/tv_song_album_detail"
        android:textSize="11sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/iv_album_art_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_album_art_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_song_artist_detail"
        tools:text="Album" />

    <TextView
        android:id="@+id/tv_song_genre_detail"
        android:textSize="11sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/iv_album_art_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_album_art_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_song_album_detail"
        tools:text="Genre" />

    <TextView
        android:id="@+id/tv_song_release_detail"
        android:textSize="11sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/iv_album_art_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_album_art_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_song_genre_detail"
        tools:text="Release date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_8dp"
        android:elevation="5dp"
        android:paddingVertical="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play"
            app:tint="@color/blue_accent"/>

        <View
            android:layout_width="260dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/blue_accent"/>

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="@string/love_this"
            android:src="@drawable/ic_favorite_nofill"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>